@@ -1,3 +1,14 @@
+2008-06-05  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-fixxref.in:
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	  Fix quoting.
+
+	* tools/migratetmpl.pl:
+	  Add first version of a tool to support migration from tmpl docs to
+	  source code comments.
+
 2008-06-04  Stefan Kost  <ensonic@users.sf.net>
 
 	* autogen.sh:
